graph simple | imagesize log
Se realiza un log del tamaño de la imagen, prev a geometry

--- a/mediapipe/calculators/winner_test/BUILD
+++ b/mediapipe/calculators/winner_test/BUILD
@@ -7,3 +7,14 @@ cc_library(
     ],
     alwayslink = 1,
 )
+
+cc_library(
+    name = "log_input_calculator",
+    srcs = ["log_input_calculator.cc"],
+    visibility = ["//visibility:public"],
+    deps = [
+        "//mediapipe/framework/api2:node",
+        "//mediapipe/framework:calculator_framework",
+    ],
+    alwayslink = 1,
+)
